--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,49 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    <div style="padding:50px">
+        <div class="container-fluid" style="padding: 25px; margin-left: 35px; " >
+            <h1>Portfolio</h1>
+            <p style="font-size:larger; margin-right:30px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+        <div class="row align-items-start" style="padding:30px; margin-left:15px; padding-top: 0px;" >
+            <div class="col-4">
+              <img src="https://storage.alboom.ninja/sites/5212/media/breaking-bad-01_e6343761f781.jpg?t=1546516377" class="img-thumbnail" alt="Main Character Walt"/>
+            </div>
+            <div class="col-4">
+              <img src="https://i2.wp.com/www.testimoniosba.com/wp-content/uploads/2021/04/A-Foto-Portada-Breaking-Bad.jpg?resize=700%2C400&ssl=1" class="img-thumbnail" alt="Jesse Pickman Character"/>
+            </div>
+            <div class="col-4">
+              <img src="https://media.altpress.com/uploads/2019/06/breaking_bad_resized.jpg" class="img-thumbnail" alt="Jesse Pickman Character"/>
+            </div>
+        </div>  
+        <div class="row align-items-start" >
+            <div class="col">
+              <h3 style="color:darkblue; margin-left:60px">Project Name</h2>
+              <p style="margin-left:60px; font-size:14px"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="col">
+              <h3 style="color:darkblue; margin-left:30px">Project Name</h2>
+              <p style="margin-left:30px; font-size:14px"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="col">
+              <h3 style="color:darkblue">Project Name</h2>
+              <p style="margin-right: 25px; font-size:14px"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>   
+            </div>
+          </div>  
+
+
+    </div>    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</body>
+</html>
+            
