--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,37 +1,24 @@
-<!-- your html code here -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-    <div style="padding:50px">
-        <div class="container-fluid" style="padding: 25px; margin-left: 35px; " >
-            <h1>Contact</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        </div>
-        <div class="container" style="padding-bottom: 45px ; margin-left: 250px;">
-            <form class="bg-secondary bg-opacity-25" style="padding: 15px; border-radius: 2px; width: 800px; ">
-                <div class="mb-3 d-flex" style="margin-right:0px;">
-                    <label for="exampleInputEmail1" class="form-label col-3" style="font-size: small;padding-left: 110px"><strong> Your Email</strong></label> 
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email" style="width: 600px; margin-left:20px; height: 50%;">
-                    </div>
-                    <div class="mb-3 d-flex">
-                        <label for="floatingTextarea" class="col-3" style="padding-left: 90px; font-size: small;"><strong>Your message</strong></label>
-                        <textarea class="form-control" placeholder="Please enter your message here" id="floatingTextarea" style="width: 800px; margin-left: 20px; height: 150px;"></textarea>  
-                    </div>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <button class="btn btn-primary me-md-2" type="button">Submit</button>
-                </form>
-        </div>
-    </div>
-   
+<!-- Contact -->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-</body>
-</html>
+<div style="padding:50px">
+    <div class="container-fluid" style="padding: 25px; margin-left: 35px; ">
+        <h1>Contact</h1>
+        <p>Si quieres saber mas y conocer en profundidad la serie y todas las secuelas y precuelas de esta magnifica serie rellena el formulario de más abajo y te responderemos en la mayor brevedad posible.</p>
+    </div>
+    <div class="container" style="padding-bottom: 45px ; margin-left: 250px;">
+        <form class="bg-secondary bg-opacity-25" style="padding: 15px; border-radius: 2px; width: 800px; ">
+            <div class="mb-3 d-flex" style="margin-right:0px;">
+                <label for="exampleInputEmail1" class="form-label col-3" style="font-size: small;padding-left: 110px"><strong> Your Email</strong></label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email" style="width: 600px; margin-left:20px; height: 50%;">
+            </div>
+            <div class="mb-3 d-flex">
+                <label for="floatingTextarea" class="col-3" style="padding-left: 90px; font-size: small;"><strong>Your message</strong></label>
+                <textarea class="form-control" placeholder="Please enter your message here" id="floatingTextarea" style="width: 800px; margin-left: 20px; height: 150px;"></textarea>
+            </div>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">Submit</button>
+        </form>
+    </div>
+</div>
+
+<!-- Contact -->
