a lot of changes

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,9 +1,10 @@
 <!-- Contact -->
 
-<div style="padding:50px">
+<div  class="bg-light bg-gradient" style="padding:50px ">
+    <a name="abajo"></a>
     <div class="container-fluid" style="padding: 25px; margin-left: 35px; ">
         <h1>Contact</h1>
-        <p>Si quieres saber mas y conocer en profundidad la serie y todas las secuelas y precuelas de esta magnifica serie rellena el formulario de más abajo y te responderemos en la mayor brevedad posible.</p>
+        <p style="padding-right:25px">Si quieres saber más y conocer en profundidad esta magnífica serie, todas sus secuelas y precuelas, rellena el siguiente formulario y te responderemos en la mayor brevedad posible. También puedes ingresar a Google y escribir en el buscador "Breaking Bad" para buscar la información tu mismo! </p>
     </div>
     <div class="container" style="padding-bottom: 45px ; margin-left: 250px;">
         <form class="bg-secondary bg-opacity-25" style="padding: 15px; border-radius: 2px; width: 800px; ">
