--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -4,9 +4,9 @@
     <div class="col-12 col-lg-4 d-flex justify-content-center">
         <img src="https://qph.cf2.quoracdn.net/main-qimg-111185f827b5070dcc774d919b2a6057-pjlq" alt="foto" class="rounded-circle redonda ">
     </div>
-    <div class="col-12 col-lg-8">
+    <div class="col-12 col-lg-8" style="padding-top: 30px ; padding-bottom: 50px;" >
         <h2 class=" fw-bolder"> Jesse Pinkman <span class="text-secondary">Aaron Paul</span> </h2>
-        <p class="fs-4">Es el compañero de Walter White en el tráfico de metanfetamina. En el instituto, Jesse era un consumidor, fabricante y traficante de poca monta de metanfetamina. Era un estudiante que prestaba poca atención a las clases de química de su profesor, el propio Walter. Años después, Jesse se dedica al tráfico de droga con el seudónimo "Cap'n Cook" y añade polvo de chili a su producto para caracterizarlo...
+        <p class="fs-6 text-justify" style="padding-top:30px;padding-bottom:30px;">Es el compañero de Walter White en el tráfico de metanfetamina. En el instituto, Jesse era un consumidor, fabricante y traficante de poca monta de metanfetamina. Era un estudiante que prestaba poca atención a las clases de química de su profesor, el propio Walter. Años después, Jesse se dedica al tráfico de droga con el seudónimo "Cap'n Cook" y añade polvo de chili a su producto para caracterizarlo...
         </p>
     </div>
 </div>
