--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,6 +1,7 @@
 <!-- TagLine -->
 
 <div class="container-fluid bgImg">
+    <a name="main"></a>
     <div class="marginMT">
         <div class="row">
             <div class="col-sm-12 taglineBG mt-5 text-center">
