--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,9 +1,10 @@
 <!-- First Heading -->
 
-<div class="row p-4 bg-white mx-auto">
-    <div class="col-12 col-lg-8 ">
-        <h2 class="fw-bolder"> Walter White <span class="text-secondary">Bryan Cranston</span> </h2>
-        <p class="fs-4">Sin saber nada sobre el tráfico de drogas, Walt obtiene la ayuda de un ex-estudiante suyo, Jesse Pinkman, para la fabricación y sobretodo para la venta de la droga. Su conocimiento científico y dedicación a la calidad le hacen producir metanfetamina a un nivel de pureza insuperable. Walt lleva a cabo un proceso alternativo utilizando metilamina, lo cual otorga a su producto un distintivo color azul: el cristal azul empieza instantáneamente a dominar el mercado y se hace popular entre traficantes y adictos..
+<div class="row p-4 bg-white mx-auto" style="margin-top:30px;">
+    <div class="col-12 col-lg-8 " style="padding-top: 25px" >
+        <a name="arriba"></a>
+        <h2 class="fw-bolder" style="padding-top: 20px ;"> Walter White <span class="text-secondary">Bryan Cranston</span> </h2>
+        <p class="fs-6" style="padding-top: 20px ;"> Sin saber nada sobre el tráfico de drogas, Walt obtiene la ayuda de un ex-estudiante suyo, Jesse Pinkman, para la fabricación y sobretodo para la venta de la droga. Su conocimiento científico y dedicación a la calidad le hacen producir metanfetamina a un nivel de pureza insuperable. Walt lleva a cabo un proceso alternativo utilizando metilamina, lo cual otorga a su producto un distintivo color azul: el cristal azul empieza instantáneamente a dominar el mercado y se hace popular entre traficantes y adictos..
         </p>
     </div>
     <div class="col-12 col-lg-4 d-flex justify-content-center">
