--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,24 +1,24 @@
 <!-- Navbar -->
 
-<nav class="navbar navbar-expand-lg bg-black btn-dark">
+<nav class="navbar navbar-expand-lg btn-outline-dark" style="background-color: #BDBDBD;">
     <div class="container-fluid">
-        <a class="navbar-brand" style="color: white;" href="#">WebSite Collaborative</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-brand" style="color: black;" href="#"><strong>FanPage</strong></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" aria-disabled="true">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" style="color: white;" aria-current="page" href="#">About</a>
+                    <a class="nav-link active" style="color: black;" aria-current="page" href="#main">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="#">Servicios</a>
+                    <a class="nav-link" style="color: black;" href="#arriba">Main Characters</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="#">Portfolio</a>
+                    <a class="nav-link" style="color: black;" href="#medio">More Characters</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                    <a class="nav-link" style="color: black;" href="#abajo" tabindex="-1" aria-disabled="true">Contact</a>
                 </li>
             </ul>
         </div>
