--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,9 +1,10 @@
 <!-- Portfolio -->
 
-<div style="padding:50px">
-    <div class="container-fluid" style="padding: 25px; margin-left: 35px; ">
-        <h1>More Characteres</h1>
-        <p style="font-size:larger; margin-right:30px">Walter White es un frustrado profesor de química en un instituto, padre de un joven discapacitado y con su esposa Skyler embarazada. Además, trabaja en un lavadero de vehículos por las tardes. Cuando le diagnostican un cáncer pulmonar terminal se plantea qué pasará con su familia cuando él muera. En una redada de la DEA, a la cual fue invitado por su cuñado, el agente Hank Schrader, Walt reconoce a un antiguo alumno suyo, Jesse Pinkman, a quien contacta para fabricar y vender metanfetamina y así asegurar el bienestar económico de su familia. Pero el acercamiento al mundo de las drogas y el trato con traficantes y mafiosos contamina la personalidad de Walter, el cual va abandonando poco a poco su personalidad recta y predecible para convertirse en alguien sin demasiados escrúpulos cuando se trata de conseguir lo que quiere.</p>
+<div style="padding:30px; margin-top: 20px">
+    <div class="container-fluid" style="margin-top:0px; padding: 15px; margin-left: 35px; ">
+        <a name="medio"></a>
+        <h1 style="padding-bottom: 15px;">More Characteres</h1>
+        <p style="font-size:16px; margin-right:30px; text-indent:20px;">Walter White es un frustrado profesor de química en un instituto, padre de un joven discapacitado y con su esposa Skyler embarazada. Además, trabaja en un lavadero de vehículos por las tardes. Cuando le diagnostican un cáncer pulmonar terminal se plantea qué pasará con su familia cuando él muera. En una redada de la DEA, a la cual fue invitado por su cuñado, el agente Hank Schrader, Walt reconoce a un antiguo alumno suyo, Jesse Pinkman, a quien contacta para fabricar y vender metanfetamina y así asegurar el bienestar económico de su familia. Pero el acercamiento al mundo de las drogas y el trato con traficantes y mafiosos contamina la personalidad de Walter, el cual va abandonando poco a poco su personalidad recta y predecible para convertirse en alguien sin demasiados escrúpulos cuando se trata de conseguir lo que quiere.</p>
     </div>
     <div class="row align-items-start" style="padding:30px; margin-left:15px; padding-top: 0px;">
         <div class="col-4">
@@ -19,11 +20,11 @@
     <div class="row align-items-start">
         <div class="col">
             <h3 style="color:darkblue; margin-left:60px">Gus Fring</h2>
-                <p style="margin-left:60px; font-size:14px"> Gustavo "Gus" Fring era el líder criminal de un imperio de drogas y el dueño de la cadena de restaurantes Los Pollos Hermanos. Un magnate de negocios y filántropo nacido en Chile. Inicialmente estaba afiliado al Cártel de Juárez, que utilizaba en secreto sus restaurantes como una tapadera legítima para la distribución de metanfetamina en todo el suroeste de Estados Unidos. Al igual que Walter White, Gus era un criminal que se escondía "en plena vista," recurriendo a su posición social como filántropo para ocultar su verdadera naturaleza según construía su imperio.</p>
+                <p class="text-justify" style="margin-left:60px; font-size:14px">  Gustavo "Gus" Fring era el líder criminal de un imperio de drogas y el dueño de la cadena de restaurantes Los Pollos Hermanos. Un magnate de negocios y filántropo nacido en Chile. Inicialmente estaba afiliado al Cártel de Juárez, que utilizaba en secreto sus restaurantes como una tapadera legítima para la distribución de metanfetamina en todo el suroeste de Estados Unidos. Al igual que Walter White, Gus era un criminal que se escondía "en plena vista," recurriendo a su posición social como filántropo para ocultar su verdadera naturaleza según construía su imperio.</p>
         </div>
         <div class="col">
             <h3 style="color:darkblue; margin-left:30px">Saul Goodman</h2>
-                <p style="margin-left:30px; font-size:14px"> es un abogado criminal de Albuquerque conocido en la ciudad por sus peculiares anuncios televisivos que se emiten a altas horas de la noche. Tiene una gran familiaridad con el mundo criminal y conexiones con algunos de los más influyentes distribuidores, como Gus Fring. Además, tiene contratados los servicios de un investigador privado veterano llamado Mike, que respeta a Saul simplemente por lo que es y a menudo ejecuta órdenes ilegales para Saul y Gus como limpiar escenas del crimen o espiar a personas.</p>
+                <p style="margin-left:30px; font-size:14px"> Es un abogado criminal de Albuquerque conocido en la ciudad por sus peculiares anuncios televisivos que se emiten a altas horas de la noche. Tiene una gran familiaridad con el mundo criminal y conexiones con algunos de los más influyentes distribuidores, como Gus Fring. Además, tiene contratados los servicios de un investigador privado veterano llamado Mike, que respeta a Saul simplemente por lo que es y a menudo ejecuta órdenes ilegales para Saul y Gus como limpiar escenas del crimen o espiar a personas.</p>
         </div>
         <div class="col">
             <h3 style="color:darkblue">Jane Margolis</h2>
